crates/tui/tests/storybook/snapshots/app_dialog_permission::web_search_permission_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---







──────────────────────────────────────────────────────────────────────
 web_search: rust terminal tui snapshots

 Allow?
  1. allow once
  2. deny
  3. allow web_search for this session
  4. allow web_search in ~/cwd

  press tab to add a reason…
 ○ normal                                                       1:1 0%
