crates/tui/tests/storybook/snapshots/app_dialog_plan::present_plan_dialog_expanded_max_height.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
─ plan ─────────────────────────────────────────────────────────────────────────
 # Goal
 Refactor parser state.

 # Sequence
 1. Add tests.
 2. Move state handling.












╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
  1. save draft
  2. approve
  3. approve and apply
 ○ normal                                                                 1:1 0%
