crates/tui/tests/storybook/snapshots/app_dialog_plan::present_plan_dialog_expanded_max_height.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 80 24
  0   0   2 fg=AnsiValue(79)
  0   2   4 fg=AnsiValue(79) attrs=bold|dim
  0   6  74 fg=AnsiValue(79)
  1   1   6 fg=AnsiValue(117) attrs=bold
  4   1  10 fg=AnsiValue(117) attrs=bold
  5   1   3 attrs=dim
  6   1   3 attrs=dim
 19   0  80 fg=AnsiValue(244)
 20   0   1 bg=AnsiValue(237)
 20   1   1 fg=Black bg=White
 20   2   3 bg=AnsiValue(237) attrs=dim
 20   5  10 fg=AnsiValue(208) bg=AnsiValue(237)
 20  15  65 bg=AnsiValue(237)
 21   1   4 attrs=dim
 22   1   4 attrs=dim
 23   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 23  10  64 bg=AnsiValue(233)
 23  74   6 fg=AnsiValue(244) bg=AnsiValue(233)
