crates/tui/tests/storybook/snapshots/app_goal::goal_banner_states.active_auto_narrow.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 32 16
  0   0   6 fg=AnsiValue(0) bg=AnsiValue(39) attrs=bold
  0   6  20 fg=AnsiValue(0) bg=AnsiValue(39)
  0  26   6 fg=AnsiValue(0) bg=AnsiValue(39) attrs=bold
  1   0  31 bg=AnsiValue(236)
  2   0   1 bg=AnsiValue(236)
  2   1  27 bg=AnsiValue(236) attrs=bold
  2  28   3 bg=AnsiValue(236)
  3   0   1 bg=AnsiValue(236)
  3   1  21 bg=AnsiValue(236) attrs=bold
  3  22   9 bg=AnsiValue(236)
  4   0  31 bg=AnsiValue(236)
 11   0   6 fg=AnsiValue(208) attrs=bold
 11   6  19 fg=AnsiValue(244)
 11  25   2 fg=AnsiValue(244) attrs=dim
 11  27   3 fg=AnsiValue(244)
 12   0  32 fg=AnsiValue(237)
 13   1   1 fg=Black bg=White
 14   0  32 fg=AnsiValue(237)
 15   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 15  10  14 bg=AnsiValue(233)
 15  24   8 fg=AnsiValue(244) bg=AnsiValue(233)
